Add style to images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,26 +22,33 @@ nav{
    padding: auto;
 }
 
-.name {
+.name, h5 {
 color:#8C418D;
 font-family: 'Fjalla One', sans-serif;
-letter-spacing: 0.1em;
+letter-spacing: 0.1%;
 }
 
 
-footer {
-    /*background-color:#8C418D;*/
+h6 {
+    background-color:#8C418D;
     color: azure;
     text-align: center;
+    padding: 1%;
+    margin-bottom: 0;
 }
 .imagen{
     width: 100%;
+    padding: 3%;
 }
 .contenedor{
     background-color: #fff;
     width: 30%;
     display: inline-block;
+    padding: 1em;
+    text-align: center;
+    margin-left: 2em;
 }
 .muestrate{
     display: inline-block;
+    text-align: center;
 }
