--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,16 +16,32 @@ nav{
     padding: 5em;
     padding-top: 1em;
     padding-bottom: 1em;
+  }
+
+  #modal-registro {
+   width: auto;
+   background-color:#8C418D;
+   padding-bottom:3em;
+   text-align: center;
 }
 
-.name {
-color:#8C418D;
-font-family: 'Fjalla One', sans-serif;
-letter-spacing: 0.1em;
+#btn-registro, #btn-inicio {
+   border-radius:5px;
+   background-color: rgb(97, 5, 77);
+   border: none;
+   padding: 0.3em;
 }
 
-footer {
-    background-color:#8C418D;
-    color: azure;
-    text-align: center;
+.close {
+   color: #FFF;
+   padding: 1em;
+}
+
+.item-ingreso-nav {
+   color: #FFF;
+}
+
+#ingreso-usuario {
+   background-color: rgb(136, 12, 138);
+   padding: 0.5em;
 }
